--- a/_config.yml
+++ b/_config.yml
@@ -19,13 +19,13 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Mi primera pagina web
-email: your-email@example.com
+email: micorreo@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Pagina web para compra de productos de oficina
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+baseurl: "/pagStat" # the subpath of your site, e.g. /blog
+url: "https://lhcastanedac.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: LCC
+github_username:  LCC
 
 # Build settings
 theme: minima
